vlib/v/checker/tests/var_option_wrong_unwrap.vv
var1 := ?int(none)
var2 := var1 or { var1? }
println(var2?)
